scss/styles.scss
/* ... */
#contact-form {
    max-width: 500px;
    margin: 0 auto;

    input, textarea {
        display: block;
        width: 100%;
        padding: 10px;
        border-radius: 4px;
        border: none;
        margin-bottom: 10px;
        background: darken($base-color, 15%);
        color: #fff;
        @include transition();
        @include placeholder {
            color: #fff;
        }

        &:focus {
            outline: none;
            background: darken($base-color, 25%);
        }
    }

    textarea {
        height: 150px;
        resize: none;
    }

    button {
        display: block;
        width: 100%;
        background: #fff;
        border-radius: 4px;
        padding: 5px 10px;
        border: none;
        color: $base-color;
        font-weight: 700;
        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
        padding-top: 10px;
        @include transition();

        &:hover {
            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
        }
    }
}

/*
    ---------------------------------------
    ----- 11. Optional Section Styles -----
    ---------------------------------------
*/

.optional-section {
    padding: 50px 15px;
    text-align: center;
    border-top: 1px solid $border;

    h2 {
        color: $heading;
    }
}

.optional-section-block {
    max-width: 700px;
    margin: 0 auto 30px auto;
    padding: 15px;
    border: 1px solid $border;
    background: #fff;
    text-align: left;

    h3 {
        font-weight: 500;
        margin: 0 0 15px 0;
        color: $heading;
    }

    h4 {
        color: $text;
        clear: both;
        font-weight: 500;
        margin: 0 0 15px 0;
    }

    p, ul {
        margin: 0 0 15px 0;
        color: $text;
        font-size: 0.9em;
    }

    ul {
        padding: 0 0 0 15px;
    }
}

/*
    -----------------------------
    ----- 12. Media Queries -----
    -----------------------------
*/

// Collapse timeline
@media only screen and (max-width: 750px) {

    #experience-timeline {
        &:before, &:after {
            left: 23px;
        }

    }

    .vtimeline-date {
        width: auto;
        text-align: left;
        position: relative;
        margin-bottom: 15px;
        display: block;
        margin-left: 70px;
    }

    .vtimeline-icon {
        margin-left: 0;
    }

    .vtimeline-content {
        margin-left: 70px;
    }

}

// Medium Devices
@media only screen and (max-width : 992px) {

    #lead {
        height: auto;
        min-height: auto;
        max-height: auto;
        padding: 100px 15px;
    }

    #lead-content {

        h1 {
            font-size: 3em;
        }

        h2 {
            font-size: 1.75em;
        }
    }

    #about {
        text-align: center;

        p {
            text-align: left;
        }
    }

    #mobile-menu-open {
        .fa {
            padding-top: 6px;
        }
    }

    #lead-content a {
        padding-top: 13px;
    }

}

// Small Devices
@media only screen and (max-width : 768px) {

    header {
        position: fixed;
        display: none;
        z-index: 999;
        animation: none;
        bottom: 0;
        height: 100%;
    }

    #mobile-menu-open, #mobile-menu-close {
        display: block;
    }

    #menu {
        height: 100%;
        overflow-y: auto;
        box-shadow: none;
        border-radius: 0;
        width: 100%;

        li {
            display: block;
            margin-bottom: 10px;
        }
    }

    #lead-content {
        h1 {
            font-size: 2em;
        }

        h2 {
            font-size: 1.3em;
        }

        a {
            padding: 10px 20px;
        }
    }

    .education-block {
        h3, span {
            float: none;
        }
    }

    .project-image {
        display: none;
    }

    .project-info {
        position: relative;
        margin: 0;
        padding: 30px 15px;
        top: auto;
        transform: none;
    }

    footer {
        text-align: center;
    }

    .social {
        text-align: center;
    }

}

// Extra Small Devices
@media only screen and (max-width : 480px) {

    #lead {
        height: 100vh;
    }

    #lead-content {

        vertical-align: middle;

        h1 {
            font-size: 3em;
            line-height: 1em;
        }

        h2 {
            font-size: 2em;
        }

        a {
            font-size: 0.9em;
            padding: 13px 20px 10px;
        }
    }

    #about {
        .right {
            text-align: center;
        }

        .about-image-size {
            margin-right: 0;
            margin-bottom: 2em;
        }
    }

}

